2015-10-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha01 final changes';git push
	git tag -a 4.5.4-alpha01 -m 'Version 4.5.4-alpha01 tag:	100% Geometry';git push --tags

	* Check-for and if found, retain, record dimension property during regridding

2015-10-27  Charlie Zender  <zender@uci.edu>

	* Ensure dim[idx].val.vp is NULL-initialized (and thus not inadvertently free'd) when PRN_DMN_IDX_CRD_VAL is False
	Fixes GitHub issue #18 reported by Pat Nichols

2015-10-21  Charlie Zender  <zender@uci.edu>

	* Change ncap2 token names to, e.g., NCAP_FLOAT, NCAP_INT, etc to prevent namespace clashes with FLOAT, INT, ... in MSVC windef.h

2015-10-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3 release procedure:
 	Changes since nco-4.5.2: nfr skl crv snwe frc_out bugs airs ncecat gag ncatted del
	cd ~/nco;git commit -a -m 'Version 4.5.3 release final changes';git push
	git tag -d 4.5.3;git push origin :refs/tags/4.5.3
	git tag -a 4.5.3 -m 'Version 4.5.3 tag: Mad Men';git push --tags

	* Hardwire 'make tst' in nco_c++ to build in.nc before running nco_c++/tst...

2015-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.3-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-beta01 final changes';git push
	git tag -a 4.5.3-beta01 -m 'Version 4.5.3-beta01 tag: nfr skl crv snwe frc_out bugs airs ncecat gag ncatted del';git push --tags

	* NCO 4.5.3-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.3-alpha08 final changes';git push
	git tag -a 4.5.3-alpha08 -m 'Version 4.5.3-alpha08 tag:	frc_out	nrm bugs';git push --tags

	* Index frc_out by grd_sz_out not var_sz_out to prevent accessing out-of-range values
	This bug affected non-conservative regridding of multi-level fields
	It was present in 4.5.2 though only for flg_frc_nrm, whose truth condition was quite narrow
	In 4.5.2 it might affect multi-level fields that have no missing values
