@@ -1,5 +1,7 @@
 2015-10-30  Charlie Zender  <zender@uci.edu>
 
+	* Add stdin infrastructure for passing regridding file list
+
 	* NCO 4.5.4-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 4.5.4-alpha01 final changes';git push
 	git tag -a 4.5.4-alpha01 -m 'Version 4.5.4-alpha01 tag:	100% Geometry';git push --tags
